--- a/cartoon-hero-index.html
+++ b/cartoon-hero-index.html
@@ -3,7 +3,7 @@
 
 <body>
 <h1>hey. i'm a big heading</h1>
-<p>hey i'm a paragraph element</p>
+<p>hey i'm a <b>paragraph</b> element</p>
 <a href="https://google.com" target="_blank" title="Let's go to google">Click me!</a>
 
 </body>
