added tsu image and a few more elements

--- a/cartoon-hero-index.html
+++ b/cartoon-hero-index.html
@@ -1,9 +1,16 @@
 <!<!DOCTYPE html>
-<head></head>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+<title>Stop Playing with Tsu</title>
+</head>
 
 <body>
 <h1>hey. i'm a big heading</h1>
 <p>hey i'm a <b>paragraph</b> element</p>
 <a href="https://google.com" target="_blank" title="Let's go to google">Click me!</a>
+<p>My name is<br> Tsu</p>
+<img src="img/tsu-01.jpg" alt="">
 
 </body>
+</html>
