added CSS stylesheet and link to stylesheet

--- a/cartoon-hero-index.html
+++ b/cartoon-hero-index.html
@@ -3,6 +3,7 @@
 <html lang="en" dir="ltr">
 <head>
 <title>Stop Playing with Tsu</title>
+<link rel="stylesheet" href="/css/cartoon-hero-styles.css">
 </head>
 
 <body>
