--- a/cartoon-hero-index.html
+++ b/cartoon-hero-index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-<h1 style="font-size: 30px"
-color="#FF5733">hey. i'm a big fat heading</h1>
+<h1 style="font-size: 30px";
+color="#FF5733";>hey. i'm a big fat heading</h1>
 <p>hey i'm a <b>paragraph</b> element</p>
 <a href="https://google.com" target="_blank" title="Let's go to google">Click me!</a>
 <p>My name is<br> Tsu</p>
