--- a/cartoon-hero-index.html
+++ b/cartoon-hero-index.html
@@ -2,11 +2,12 @@
 
 <html lang="en" dir="ltr">
 <head>
+  <link rel="stylesheet" href="/css/cartoon-hero-styles.css">
 <title>Stop Playing with Tsu</title>
 </head>
 
 <body>
-<h1 style="font-size: 30px; color: blue;">hey. i'm a big fat heading</h1>
+<h1>hey. i'm a big fat heading</h1>
 <p>hey i'm a <b>paragraph</b> element</p>
 <a href="https://google.com" target="_blank" title="Let's go to google">Click me!</a>
 <p>My name is<br> Tsu</p>
