--- a/cartoon-hero-index.html
+++ b/cartoon-hero-index.html
@@ -3,6 +3,13 @@
 <html lang="en" dir="ltr">
 <head>
   <link rel="stylesheet" href="/css/cartoon-hero-styles.css">
+  <style type="text/css">
+  h1{
+    font-size: 30px;
+    color: aqua;
+  }
+
+  </style>
 <title>Stop Playing with Tsu</title>
 </head>
 
