--- a/cartoon-hero-index.html
+++ b/cartoon-hero-index.html
@@ -7,7 +7,7 @@
   <style type="text/css">
     h1 {
       font-size: 30px;
-      color: aqua;
+      color: silver;
     }
   </style>
   <title>Stop Playing with Tsu</title>
