--- a/cartoon-hero-index.html
+++ b/cartoon-hero-index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <link rel="stylesheet" href="/css/cartoon-hero-styles.css">
+  <link rel="stylesheet" href="/css/cartoon-hero-styles.css"></link>
     <title>Stop Playing with Tsu</title>
 </head>
 
