--- a/cartoon-hero-index.html
+++ b/cartoon-hero-index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h1>hey. i'm a big fat heading</h1>
+  <h1 class="big uppercase">hey. i'm a big fat heading</h1>
   <h1>hey. i'm a big fat heading</h1>
   <p>hey i'm a <b>paragraph</b> element</p>
   <a href="https://google.com" target="_blank" title="Let's go to google">Click me!</a>
