added bootstrap and friend images

--- a/index.html
+++ b/index.html
@@ -5,16 +5,58 @@
 <head>
   <link rel="stylesheet"
   type="text/css" href="css/cartoon-hero-styles.css" ></link>
+  <link rel="stylesheet"
+  type="text/css" href="css/bootstrap-grid.css" ></link>
+  <link rel="icon" href="img/tsu-03.jpg">
     <title>Stop Playing with Tsu</title>
 </head>
 
 <body>
-  <h1 class="big uppercase">hey. i'm a big fat heading</h1>
-  <h1>hey. i'm a big fat heading</h1>
-  <p>hey i'm a <b>paragraph</b> element</p>
-  <a href="https://google.com" target="_blank" title="Let's go to google">Click me!</a>
-  <p>My name is<br> Tsu</p>
-  <img src="img/tsu-01.jpg" alt="">
+<!-- header start -->
+  <header>
+
+  <img src="img/tsu-03.jpg" alt="header picture of Froppy" title="Froppy">
+  <h1>Froppy</h1>
+</header>
+
+<!-- main element -->
+<main>
+  <h2>About Froppy</h2>
+  <p><a href="https://myheroacademia.fandom.com/wiki/Tsuyu_Asui" target="_blank">Froppy</a> is an aspiring hero of class-1A at UA high school. She has the quirk: Frog. Her real name is Tsuyu Asui</p>
+  <img src="img/tsu-04.jpg" alt="picture of froppy in action" title="Froppy">
+  <caption>
+  <p>there she go!</p></caption>
+
+<!-- characteristics -->
+<div class="characteristics">
+  <h2>Froppy's characteristics</h2>
+  <ul>
+    <li>she can do basically anything a frog can do</li>
+    <li>she can stick her tongue out 20m</li>
+    <li>she can throw up her stomach and clean it</li>
+    <li>she can secrete a mucus that camoflouges herself</li>
+    <li>She can jump <b>really</b> high and <b>really</b> far</li>
+  </ul>
+</div>
+<!-- end characteristics -->
+<!-- friends -->
+<div class="friends">
+  <h2>Froppy's friends</h2>
+  <p>Fropy has plenty of close friends in the hero course at UA</p>
+  <ul>
+    <li><img src="img/uravity.jpg" alt="picture of uravity" title="Uravity"><br><a href="https://hero.fandom.com/wiki/Ochaco_Uraraka" target="_blank">Hero: Uravity</a> </li>
+    <li><img src="img/deku.jpg" alt="picture of Deku"title="Deku"> <br> <a href="https://hero.fandom.com/wiki/Izuku_Midoriya" target="_blank">Hero: Deku</a></li>
+    <li><img src="img/invisible-girl.jpg" alt="picture of Invisible Girl"title="Invisible Girl"> <br><a href="https://hero.fandom.com/wiki/Toru_Hagakure" target="_blank">Hero: Invisible Girl</a> </li>
+  </ul>
+</div>
+<!-- end friends -->
+</main>
+<!-- end main element -->
+
+<!-- footer -->
+<footer>
+<p>Froppy is really <b>that girl</b> &copy; CodedByParksRichieWork</p>
+</footer>
 
 </body>
 
