coded css for index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet"
   type="text/css" href="css/bootstrap-grid.css" ></link>
   <link rel="icon" href="img/tsu-03.jpg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <title>Stop Playing with Tsu</title>
 </head>
 
@@ -23,16 +26,17 @@
 <main>
   <h2>About Froppy</h2>
   <p><a href="https://myheroacademia.fandom.com/wiki/Tsuyu_Asui" target="_blank">Froppy</a> is an aspiring hero of class-1A at UA high school. She has the quirk: Frog. Her real name is Tsuyu Asui</p>
-  <img src="img/tsu-04.jpg" alt="picture of froppy in action" title="Froppy">
-  <caption>
-  <p>there she go!</p></caption>
+<div>
+  <img src="img/tsu-04.jpg" alt="picture of froppy in action" title="Froppy and Tsukyomi">
+  <p class="caption">there she go!</p>
+</div>
 
 <!-- characteristics -->
 <div class="characteristics">
   <h2>Froppy's characteristics</h2>
-  <ul>
+  <ul class="ul-characteristics">
     <li>she can do basically anything a frog can do</li>
-    <li>she can stick her tongue out 20m</li>
+    <li>she can stick her tongue out<---->20m</li>
     <li>she can throw up her stomach and clean it</li>
     <li>she can secrete a mucus that camoflouges herself</li>
     <li>She can jump <b>really</b> high and <b>really</b> far</li>
@@ -42,7 +46,7 @@
 <!-- friends -->
 <div class="friends">
   <h2>Froppy's friends</h2>
-  <p>Fropy has plenty of close friends in the hero course at UA</p>
+  <p>Froppy has plenty of close friends in the hero course at UA High School</p>
   <ul>
     <li><img src="img/uravity.jpg" alt="picture of uravity" title="Uravity"><br><a href="https://hero.fandom.com/wiki/Ochaco_Uraraka" target="_blank">Hero: Uravity</a> </li>
     <li><img src="img/deku.jpg" alt="picture of Deku"title="Deku"> <br> <a href="https://hero.fandom.com/wiki/Izuku_Midoriya" target="_blank">Hero: Deku</a></li>
