--- a/index.html
+++ b/index.html
@@ -3,64 +3,89 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <link rel="stylesheet"
-  type="text/css" href="css/cartoon-hero-styles.css" ></link>
-  <link rel="stylesheet"
-  type="text/css" href="css/bootstrap-grid.css" ></link>
+  <link rel="stylesheet" type="text/css" href="css/cartoon-hero-styles.css">
+  </link>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css">
+  </link>
   <link rel="icon" href="img/tsu-03.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
-    <title>Stop Playing with Tsu</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+  <title>Stop Playing with Tsu</title>
 </head>
 
 <body>
-<!-- header start -->
+  <!-- header start -->
   <header>
 
-  <img src="img/tsu-03.jpg" alt="header picture of Froppy" title="Froppy">
-  <h1>Froppy</h1>
-</header>
+    <img src="img/tsu-03.jpg" alt="header picture of Froppy" title="Header Picture of Froppy">
+    <h1>Froppy</h1>
+  </header>
 
-<!-- main element -->
-<main>
-  <h2>About Froppy</h2>
-  <p><a href="https://myheroacademia.fandom.com/wiki/Tsuyu_Asui" target="_blank">Froppy</a> is an aspiring hero of class-1A at UA high school. She has the quirk: Frog. Her real name is Tsuyu Asui</p>
-<div>
-  <img src="img/tsu-04.jpg" alt="picture of froppy in action" title="Froppy and Tsukyomi">
-  <p class="caption">there she go!</p>
-</div>
+  <!-- main element -->
+  <main>
+    <!-- about -->
+    <h2>About Froppy</h2>
+    <p><a href="https://myheroacademia.fandom.com/wiki/Tsuyu_Asui" target="_blank">Froppy</a> is an aspiring hero of class-1A at UA high school. She has the quirk: Frog. Her real name is Tsuyu Asui</p>
+    <div>
+      <a class="about-img" href="https://heroacademiamanga.com/manga/vol-tbd-chapterapter-61/"><img src="img/tsu-04.jpg" alt="picture of froppy in action" title="Froppy and Tsukyomi versus Ectoplasm, Manga Chapter: 61"></a>
+      <p class="caption">there she go!</p>
+    </div>
 
-<!-- characteristics -->
-<div class="characteristics">
-  <h2>Froppy's characteristics</h2>
-  <ul class="ul-characteristics">
-    <li>she can do basically anything a frog can do</li>
-    <li>she can stick her tongue out<---->20m</li>
-    <li>she can throw up her stomach and clean it</li>
-    <li>she can secrete a mucus that camoflouges herself</li>
-    <li>She can jump <b>really</b> high and <b>really</b> far</li>
-  </ul>
-</div>
-<!-- end characteristics -->
-<!-- friends -->
-<div class="friends">
-  <h2>Froppy's friends</h2>
-  <p>Froppy has plenty of close friends in the hero course at UA High School</p>
-  <ul>
-    <li><img src="img/uravity.jpg" alt="picture of uravity" title="Uravity"><br><a href="https://hero.fandom.com/wiki/Ochaco_Uraraka" target="_blank">Hero: Uravity</a> </li>
-    <li><img src="img/deku.jpg" alt="picture of Deku"title="Deku"> <br> <a href="https://hero.fandom.com/wiki/Izuku_Midoriya" target="_blank">Hero: Deku</a></li>
-    <li><img src="img/invisible-girl.jpg" alt="picture of Invisible Girl"title="Invisible Girl"> <br><a href="https://hero.fandom.com/wiki/Toru_Hagakure" target="_blank">Hero: Invisible Girl</a> </li>
-  </ul>
-</div>
-<!-- end friends -->
-</main>
-<!-- end main element -->
+    <!-- characteristics -->
+    <div class="characteristics">
+      <h2>Froppy's characteristics</h2>
+      <ul class="ul-characteristics">
+        <li>she can do basically anything a frog can do</li>
+        <li>she can stick her tongue out<---->20m</li>
+        <li>she can throw up her stomach and clean it</li>
+        <li>she can secrete a mucus that camoflauges herself</li>
+        <li>She can jump <b>really</b> high and <b>really</b> far</li>
+      </ul>
+    </div>
+    <!-- end characteristics -->
+    <!-- friends -->
+    <div class="friends">
+      <h2>Froppy's friends</h2>
+      <p>Froppy has plenty of close friends in the hero course at UA High School</p>
 
-<!-- footer -->
-<footer>
-<p>Froppy is really <b>that girl</b> &copy; CodedByParksRichieWork</p>
-</footer>
+      <ul class="friends-list">
+        <div class="row">
+          <!-- uravity -->
+          <div class="col-sm">
+            <li class="friend-img-uravity">
+              <a href="https://hero.fandom.com/wiki/Ochaco_Uraraka" target="_blank">
+                <img src="img/uravity-02.jpg" alt="picture of uravity" title="Uravity"><br>Hero: Uravity
+              </a>
+            </li>
+          </div>
+          <!-- deku -->
+          <div class="col-sm">
+            <li class="friend-img-deku">
+              <a href="https://hero.fandom.com/wiki/Izuku_Midoriya" target="_blank">
+                <img src="img/deku.jpg" alt="picture of Deku" title="Deku"> <br> Hero: Deku
+              </a>
+            </li>
+          </div>
+          <!-- invisible girl -->
+          <div class="col-sm">
+            <li class="friend-img-ig">
+              <a href="https://hero.fandom.com/wiki/Toru_Hagakure" target="_blank">
+                <img src="img/invisible-girl-02.jpg" alt="picture of Invisible Girl" title="Invisible Girl"> <br>Hero: Invisible Girl
+              </a>
+            </li>
+          </div>
+        </div>
+      </ul>
+    </div>
+    <!-- end friends -->
+  </main>
+  <!-- end main element -->
+
+  <!-- footer -->
+  <footer>
+    <p>Froppy is really <b>that girl</b> &copy; CodedByParksRichieWork</p>
+  </footer>
 
 </body>
 
