--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h2>About Froppy</h2>
     <p><a href="https://myheroacademia.fandom.com/wiki/Tsuyu_Asui" target="_blank">Froppy</a> is an aspiring hero of class-1A at UA high school. She has the quirk: Frog. Her real name is Tsuyu Asui</p>
     <div>
-      <a class="about-img" href="https://heroacademiamanga.com/manga/vol-tbd-chapterapter-61/"><img src="img/tsu-04.jpg" alt="picture of froppy in action" title="Froppy and Tsukyomi versus Ectoplasm, Manga Chapter: 61"></a>
+      <a class="about-img" href="https://heroacademiamanga.com/manga/vol-tbd-chapterapter-61/" target="_blank"><img src="img/tsu-04.jpg" alt="picture of froppy in action" title="Click to read Froppy and Tsukyomi versus Ectoplasm, Manga Chapter: 61" target=""></a>
       <p class="caption">there she go!</p>
     </div>
 
