edited CSS and HTML to make nav bar
set up nav bar capabilities but decided to leave code as comment in case I want it later

--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
 </head>
 
 <body>
+
+  <!-- nav -->
+  <!-- <div class="nav">
+    <nav>
+  <ul>
+    <div class="row">
+    <li><a href="#About">About</a></li>
+    <li><a href="#Characteristics">Charcateristics</a></li>
+    <li><a href="#Friends">Friends</a></li>
+  </div>
+  </ul>
+  </nav
+  </div> -->
   <!-- header start -->
   <header>
 
@@ -24,16 +37,17 @@
 
   <!-- main element -->
   <main>
+
     <!-- about -->
-    <h2>About Froppy</h2>
-    <p><a href="https://myheroacademia.fandom.com/wiki/Tsuyu_Asui" target="_blank">Froppy</a> is an aspiring hero of class-1A at UA high school. She has the quirk: Frog. Her real name is Tsuyu Asui</p>
+    <h2 id=About>About Froppy</h2>
+    <p><a href="https://myheroacademia.fandom.com/wiki/Tsuyu_Asui" target="_blank" title="Froppy Fandom link">Froppy</a> is an aspiring hero of class-1A at UA high school. She has the quirk: Frog. Her real name is Tsuyu Asui</p>
     <div>
       <a class="about-img" href="https://heroacademiamanga.com/manga/vol-tbd-chapterapter-61/" target="_blank"><img src="img/tsu-04.jpg" alt="picture of froppy in action" title="Click to read Froppy and Tsukyomi versus Ectoplasm, Manga Chapter: 61" target=""></a>
       <p class="caption">there she go!</p>
     </div>
 
     <!-- characteristics -->
-    <div class="characteristics">
+    <div id=Characteristics class="characteristics">
       <h2>Froppy's characteristics</h2>
       <ul class="ul-characteristics">
         <li>she can do basically anything a frog can do</li>
@@ -45,7 +59,7 @@
     </div>
     <!-- end characteristics -->
     <!-- friends -->
-    <div class="friends">
+    <div id=Friends class="friends">
       <h2>Froppy's friends</h2>
       <p>Froppy has plenty of close friends in the hero course at UA High School</p>
 
@@ -55,7 +69,7 @@
           <div class="col-sm">
             <li class="friend-img-uravity">
               <a href="https://hero.fandom.com/wiki/Ochaco_Uraraka" target="_blank">
-                <img src="img/uravity-02.jpg" alt="picture of uravity" title="Uravity"><br>Hero: Uravity
+                <img src="img/uravity-02.jpg" alt="picture of uravity" title="Uravity Fandom Link"><br>Hero: Uravity
               </a>
             </li>
           </div>
@@ -63,7 +77,7 @@
           <div class="col-sm">
             <li class="friend-img-deku">
               <a href="https://hero.fandom.com/wiki/Izuku_Midoriya" target="_blank">
-                <img src="img/deku.jpg" alt="picture of Deku" title="Deku"> <br> Hero: Deku
+                <img src="img/deku.jpg" alt="picture of Deku" title="Deku Fandom Link"> <br> Hero: Deku
               </a>
             </li>
           </div>
@@ -71,7 +85,7 @@
           <div class="col-sm">
             <li class="friend-img-ig">
               <a href="https://hero.fandom.com/wiki/Toru_Hagakure" target="_blank">
-                <img src="img/invisible-girl-02.jpg" alt="picture of Invisible Girl" title="Invisible Girl"> <br>Hero: Invisible Girl
+                <img src="img/invisible-girl-02.jpg" alt="picture of Invisible Girl" title="Invisible Girl Fandom Link"> <br>Hero: Invisible Girl
               </a>
             </li>
           </div>
